Closed
Bug 238619
Opened 21 years ago
Closed 20 years ago
font-size: 0; Mozilla crashes after showing the title line [@ nsFontMetricsGTK::RealizeFont]
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: Joachim.Reichelt, Assigned: ajschult784)
References
()
Details
(Keywords: crash)
Crash Data
Attachments
(3 files)
7.46 KB,
text/plain
|
Details | |
625 bytes,
application/octet-stream
|
Details | |
1.35 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
chofmann
:
approval1.8b2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; de-AT; rv:1.7b) Gecko/20040316
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; de-AT; rv:1.7b) Gecko/20040316
Cannot access fedora.redhat.com
Reproducible: Always
Steps to Reproduce:
1. go to that url
2.
3.
Actual Results:
crash of Mozilla
Expected Results:
show the page :-;
No problem on WIn32!
Maybe the source of problem, that I have SuSE 8.0, gcc version 2.95.3 20010315
(SuSE).
I just tried to dubug it a little bit:
(no debugging symbols found)...
Program received signal SIGFPE, Arithmetic exception.
[Switching to Thread 1024 (LWP 20494)]
0x41095e0d in NSGetModule () from /opt/mozilla-1.7b/components/libgfx_gtk.so
(gdb)
============
other users on my machine can access the page!!
So it seems to be a problem from "left overs" in my .mozilla.
Updated•21 years ago
|
Is it an xft build? do you have any *.fon files in your ~/.fonts dir? (bug 180309)
(In reply to comment #2)
> Is it an xft build? do you have any *.fon files in your ~/.fonts dir? (bug 180309)
I do not have gtk2
There is no ~/.font*
I think it is no xft:
ldd /opt/mozilla/mozilla-bin
libmozjs.so => not found
libplds4.so => not found
libplc4.so => not found
libnspr4.so => not found
libpthread.so.0 => /lib/libpthread.so.0 (0x40035000)
libdl.so.2 => /lib/libdl.so.2 (0x4004b000)
libgtk-1.2.so.0 => /usr/lib/libgtk-1.2.so.0 (0x4004f000)
libgdk-1.2.so.0 => /usr/lib/libgdk-1.2.so.0 (0x40202000)
libgmodule-1.2.so.0 => /usr/lib/libgmodule-1.2.so.0 (0x40244000)
libglib-1.2.so.0 => /usr/lib/libglib-1.2.so.0 (0x40248000)
libXi.so.6 => /usr/X11R6/lib/libXi.so.6 (0x4026c000)
libXext.so.6 => /usr/X11R6/lib/libXext.so.6 (0x40274000)
libX11.so.6 => /usr/X11R6/lib/libX11.so.6 (0x40282000)
libm.so.6 => /lib/libm.so.6 (0x40342000)
libc.so.6 => /lib/libc.so.6 (0x40365000)
/lib/ld-linux.so.2 => /lib/ld-linux.so.2 (0x40000000)
This crash is only for ONE USER
There seems to be a problem in the local data:
removing ~/.mozilla fixes the problem!
How to get the files to remove?
Are these leftover from older installations or plugins?
This bug is triggert by prefs.js:
Add:
user_pref("font.scale.aa_bitmap.always", true);
And this bug ist triggert
Assignee | ||
Comment 5•21 years ago
|
||
worksforme with linux trunk 2004040408, even with the AASB pref set.
Comment 6•21 years ago
|
||
Reporter, if bug 239654 and this one only occur under identical circumstances
(except for url) you might want to mark one as duplicate of the other
Updated•20 years ago
|
Keywords: stackwanted
I was sad on this funny thing. So I downloaded the pages from fedora.redhad.com:
/css/content.css /css/docbook.css index.html /css/layout.css
and changed a little bit the css.
The source of the touble is fixed by:
rh-fedora> diff layout.css*
3a4
> /* nofont-family: arial; */
100c101
< font-size: 0;
---
> font-size: 0.1;
So my system does not like the "font-size: 0;"
Hope this helps a little bit
Comment 9•20 years ago
|
||
Joachim, if you could make a single-file testcase that has the minimum amount of
markup with which you crash, and attach that to this bug, that would be helpful
Summary: Mozilla crashes after showing the title line → font-size: 0; Mozilla crashes after showing the title line
Reporter | ||
Comment 10•20 years ago
|
||
Loading this index.html will crash my Mozilla 1.7 final
Updated•20 years ago
|
Product: Browser → Seamonkey
Assignee | ||
Comment 11•20 years ago
|
||
#0 0xb663efd8 in nsFontMetricsGTK::RealizeFont (this=0x877cef0)
at nsFontMetricsGTK.cpp:1818
#1 0xb663ee82 in nsFontMetricsGTK::Init (this=0x877cef0, aFont=@0x87db9ec,
aLangGroup=0x83a2178, aContext=0x851aea8) at nsFontMetricsGTK.cpp:1704
#2 0xb788d076 in nsFontCache::GetMetricsFor ()
from /build/andrew/gtk1/mozilla/dist/bin/libgkgfx.so
nsFontMetricsGTK.cpp:
1818 mEmAscent = nscoord(mMaxAscent * mEmHeight / lineSpacing);
both mMaxAscent and lineSpacing are 0.
Assignee: general → blizzard
Status: UNCONFIRMED → NEW
Component: General → GFX: Gtk
Ever confirmed: true
Keywords: stackwanted
Product: Mozilla Application Suite → Core
QA Contact: general → ian
Summary: font-size: 0; Mozilla crashes after showing the title line → font-size: 0; Mozilla crashes after showing the title line [@ nsFontMetricsGTK::RealizeFont]
Assignee | ||
Comment 12•20 years ago
|
||
this bandaid doesn't give me a warm fuzzy feeling, but does fix the crash and
can't have adverse side-effects.
also, mEmHeight is only non-zero because it's forced to be (line 1806).
Assignee: blizzard → ajschult
Status: NEW → ASSIGNED
Attachment #182305 -
Flags: superreview?(dbaron)
Attachment #182305 -
Flags: review?(dbaron)
Attachment #182305 -
Flags: superreview?(dbaron)
Attachment #182305 -
Flags: superreview+
Attachment #182305 -
Flags: review?(dbaron)
Attachment #182305 -
Flags: review+
Assignee | ||
Comment 13•20 years ago
|
||
Comment on attachment 182305 [details] [diff] [review]
patch
zero risk crash fix
Attachment #182305 -
Flags: approval1.8b2?
Comment 14•20 years ago
|
||
Comment on attachment 182305 [details] [diff] [review]
patch
a=chofmann
Attachment #182305 -
Flags: approval1.8b2? → approval1.8b2+
Assignee | ||
Comment 15•20 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Product: Core → Core Graveyard
Updated•13 years ago
|
Crash Signature: [@ nsFontMetricsGTK::RealizeFont]
You need to log in
before you can comment on or make changes to this bug.
Description
•