Bug 238619 font-size: 0; Mozilla crashes after showing the title line [@ nsFontMetricsGTK::RealizeFont] patch by ajschult@verizon.net r=dbaron sr=dbaron a=chofmann